--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -35,5 +35,22 @@
       "language": "言語",
       "signOut": "ログアウト"
     }
+  },
+  "POS": {
+    "NOUN": "名詞",
+    "VERB": "動詞",
+    "TRANSITIVE_VERB": "他動詞",
+    "INTRANSITIVE_VERB": "自動詞",
+    "ADJECTIVE": "形容詞",
+    "ADVERB": "副詞",
+    "PREPOSITION": "前置詞",
+    "CONJUNCTION": "接続詞",
+    "PRONOUN": "代名詞",
+    "INTERJECTION": "感動詞",
+    "PHRASE": "熟語",
+    "DETERMINER": "冠詞",
+    "IDIOM": "慣用句",
+    "ORDINAL": "序数",
+    "OTHER": "その他"
   }
 }
