--- a/src/i18n/messages/zh-TW.json
+++ b/src/i18n/messages/zh-TW.json
@@ -35,5 +35,22 @@
       "language": "語言",
       "signOut": "登出"
     }
+  },
+  "POS": {
+    "NOUN": "名詞",
+    "VERB": "動詞",
+    "TRANSITIVE_VERB": "及物動詞",
+    "INTRANSITIVE_VERB": "不及物動詞",
+    "ADJECTIVE": "形容詞",
+    "ADVERB": "副詞",
+    "PREPOSITION": "介詞",
+    "CONJUNCTION": "連詞",
+    "PRONOUN": "代詞",
+    "INTERJECTION": "感嘆詞",
+    "PHRASE": "短語",
+    "DETERMINER": "冠詞",
+    "IDIOM": "成語",
+    "ORDINAL": "序數",
+    "OTHER": "其他"
   }
 }
