--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -57,6 +57,66 @@
         "description": "ワードカードの翻訳言語を選択してください。"
       }
     },
+    "editForm": {
+      "word": {
+        "label": "単語",
+        "placeholder": "単語を入力",
+        "description": "単語を入力してください。",
+        "wordIsRequired": "単語は必須です",
+        "wordIsTooLong": "単語は100文字以内で入力してください。"
+      },
+      "phonetics": {
+        "label": "発音",
+        "placeholder": "発音を入力",
+        "description": "発音を入力してください。",
+        "phoneticsIsRequired": "発音は必須です",
+        "phoneticsIsTooLong": "発音は100文字以内で入力してください。"
+      },
+      "definitions": {
+        "label": "定義",
+        "placeholder": "定義を入力",
+        "description": "定義を入力してください。",
+        "definitionsIsRequired": "定義は必須です",
+        "definitionsIsTooLong": "定義は500文字以内で入力してください。"
+      },
+      "example": {
+        "label": "例文",
+        "placeholder": "例文を入力",
+        "description": "例文を入力してください。",
+        "exampleIsRequired": "例文は必須です",
+        "exampleIsTooLong": "例文は500文字以内で入力してください。"
+      },
+      "derivatives": {
+        "label": "派生語",
+        "placeholder": "派生語を入力",
+        "description": "派生語を入力してください。",
+        "derivativesIsTooLong": "派生語は150文字以内で入力してください。"
+      },
+      "synonyms": {
+        "label": "同義語",
+        "placeholder": "同義語を入力",
+        "description": "同義語を入力してください。",
+        "synonymsIsTooLong": "同義語は150文字以内で入力してください。"
+      },
+      "antonyms": {
+        "label": "反義語",
+        "placeholder": "反義語を入力",
+        "description": "反義語を入力してください。",
+        "antonymsIsTooLong": "反義語は150文字以内で入力してください。"
+      },
+      "note": {
+        "label": "メモ",
+        "placeholder": "メモを入力",
+        "description": "メモを入力してください。",
+        "noteIsTooLong": "メモは1000文字以内で入力してください。"
+      },
+      "language": {
+        "label": "言語",
+        "placeholder": "言語を選択",
+        "description": "ワードカードの言語を選択してください。",
+        "languageIsRequired": "言語は必須です"
+      }
+    },
     "extra": {
       "derivatives": "派生語",
       "synonyms": "同義語",
