--- a/src/i18n/messages/zh-CN.json
+++ b/src/i18n/messages/zh-CN.json
@@ -57,6 +57,66 @@
         "description": "请选择释义和例句的翻译语言。"
       }
     },
+    "editForm": {
+      "word": {
+        "label": "单词",
+        "placeholder": "输入单词",
+        "description": "请输入单词。",
+        "wordIsRequired": "单词为必填项。",
+        "wordIsTooLong": "单词不能超过100个字符。"
+      },
+      "phonetics": {
+        "label": "发音",
+        "placeholder": "输入发音",
+        "description": "请输入发音。",
+        "phoneticsIsRequired": "发音为必填项。",
+        "phoneticsIsTooLong": "发音不能超过100个字符。"
+      },
+      "definitions": {
+        "label": "定义",
+        "placeholder": "输入定义",
+        "description": "请输入定义。",
+        "definitionsIsRequired": "定义为必填项。",
+        "definitionsIsTooLong": "定义不能超过500个字符。"
+      },
+      "example": {
+        "label": "例句",
+        "placeholder": "输入例句",
+        "description": "请输入例句。",
+        "exampleIsRequired": "例句为必填项。",
+        "exampleIsTooLong": "例句不能超过500个字符。"
+      },
+      "derivatives": {
+        "label": "派生词",
+        "placeholder": "输入派生词",
+        "description": "请输入派生词。",
+        "derivativesIsTooLong": "派生词不能超过150个字符。"
+      },
+      "synonyms": {
+        "label": "同义词",
+        "placeholder": "输入同义词",
+        "description": "请输入同义词。",
+        "synonymsIsTooLong": "同义词不能超过150个字符。"
+      },
+      "antonyms": {
+        "label": "反义词",
+        "placeholder": "输入反义词",
+        "description": "请输入反义词。",
+        "antonymsIsTooLong": "反义词不能超过150个字符。"
+      },
+      "note": {
+        "label": "学习笔记",
+        "placeholder": "输入学习笔记",
+        "description": "请输入学习笔记。",
+        "noteIsTooLong": "学习笔记不能超过1000个字符。"
+      },
+      "language": {
+        "label": "语言",
+        "placeholder": "选择语言",
+        "description": "请选择单词卡的语言。",
+        "languageIsRequired": "语言为必填项。"
+      }
+    },
     "extra": {
       "derivatives": "派生词",
       "synonyms": "同义词",
