feat: i18n用テキストを追加

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -37,6 +37,10 @@
     }
   },
   "wordbook": {
+    "list": {
+      "generating": "Generating...",
+      "new": "New Card"
+    },
     "newWordAIForm": {
       "generate": "Generate",
       "stop": "Stop",
