--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -37,6 +37,10 @@
     }
   },
   "wordbook": {
+    "list": {
+      "generating": "生成中...",
+      "new": "新規生成"
+    },
     "newWordAIForm": {
       "generate": "生成",
       "stop": "停止",
