--- a/src/i18n/messages/zh-TW.json
+++ b/src/i18n/messages/zh-TW.json
@@ -37,6 +37,10 @@
     }
   },
   "wordbook": {
+    "list": {
+      "generating": "生成中…",
+      "new": "生成新單字"
+    },
     "newWordAIForm": {
       "generate": "生成",
       "stop": "終止",
