--- a/src/i18n/messages/zh-CN.json
+++ b/src/i18n/messages/zh-CN.json
@@ -42,21 +42,26 @@
       "new": "生成新单词"
     },
     "newWordAIForm": {
+      "title": "生成新单词",
       "generate": "生成",
       "stop": "停止",
       "words": {
-        "placeholder": "输入单词",
+        "label": "单词",
+        "placeholder": "输入多个单词，用逗号分隔",
         "description": "请输入您想要生成单词卡的单词。"
       },
       "model": {
+        "label": "模型",
         "placeholder": "选择模型",
         "description": "请选择您想要使用的模型来生成单词卡。"
       },
       "learningLanguage": {
+        "label": "学习语言",
         "placeholder": "选择语言",
         "description": "请选择单词本身的语言。"
       },
       "translationLanguage": {
+        "label": "翻译语言",
         "placeholder": "选择语言",
         "description": "请选择释义和例句的翻译语言。"
       }
