--- a/src/i18n/messages/zh-TW.json
+++ b/src/i18n/messages/zh-TW.json
@@ -8,6 +8,7 @@
     "save": "存儲",
     "continue": "繼續",
     "delete": "刪除",
+    "deleteDescription": "此操作無法撤銷。確定要刪除嗎？",
     "ok": "是",
     "no": "否",
     "close": "關閉",
@@ -15,6 +16,9 @@
     "editor": {
       "createdBy": "作者 {name}",
       "lastEdit": "最後編輯 {name}"
+    },
+    "error": {
+      "database": "資料庫錯誤"
     }
   },
   "sidebar": {
@@ -48,7 +52,9 @@
       "words": {
         "label": "單字",
         "placeholder": "輸入多個單字，用逗號分隔",
-        "description": "請輸入您想要生成單字卡的單字。"
+        "description": "請輸入您想要生成單字卡的單字。",
+        "wordsIsRequired": "單字為必填項。",
+        "wordsIsTooLong": "單字不能超過500個字符。"
       },
       "model": {
         "label": "模型",
@@ -67,6 +73,12 @@
       }
     },
     "editForm": {
+      "title": "編輯單字卡",
+      "save": {
+        "success": "單字卡更新成功",
+        "error": "單字卡更新失敗",
+        "invalidForm": "無效的表單"
+      },
       "word": {
         "label": "單字",
         "placeholder": "輸入單字",
