fix: i18nテキストを修正

--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -140,7 +140,7 @@
     },
     "extra": {
       "derivatives": "派生語",
-      "synonyms": "同義語",
+      "synonyms": "類義語",
       "antonyms": "反義語"
     }
   },
