--- a/src/i18n/messages/zh-CN.json
+++ b/src/i18n/messages/zh-CN.json
@@ -140,7 +140,7 @@
     },
     "extra": {
       "derivatives": "派生词",
-      "synonyms": "同义词",
+      "synonyms": "近义词",
       "antonyms": "反义词"
     }
   },
