--- a/src/i18n/messages/zh-TW.json
+++ b/src/i18n/messages/zh-TW.json
@@ -140,7 +140,7 @@
     },
     "extra": {
       "derivatives": "派生字",
-      "synonyms": "同義字",
+      "synonyms": "近義字",
       "antonyms": "反義字"
     }
   },
