--- a/src/i18n/messages/zh-CN.json
+++ b/src/i18n/messages/zh-CN.json
@@ -64,7 +64,8 @@
       "learningLanguage": {
         "label": "学习语言",
         "placeholder": "选择语言",
-        "description": "请选择单词本身的语言。"
+        "description": "请选择单词本身的语言。",
+        "auto": "自动检测"
       },
       "translationLanguage": {
         "label": "翻译语言",
