--- a/src/i18n/messages/zh-TW.json
+++ b/src/i18n/messages/zh-TW.json
@@ -64,7 +64,8 @@
       "learningLanguage": {
         "label": "學習語言",
         "placeholder": "選擇語言",
-        "description": "請選擇單字本身的語言。"
+        "description": "請選擇單字本身的語言。",
+        "auto": "自動檢測"
       },
       "translationLanguage": {
         "label": "翻譯語言",
