--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -156,9 +156,9 @@
     "CONJUNCTION": "接続詞",
     "PRONOUN": "代名詞",
     "INTERJECTION": "感動詞",
-    "PHRASE": "熟語",
+    "PHRASE": "成句",
     "DETERMINER": "冠詞",
-    "IDIOM": "慣用句",
+    "IDIOM": "熟語",
     "ORDINAL": "序数",
     "OTHER": "その他"
   }
