refactor: posの構造を調整、名詞の性別を追加

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -147,6 +147,9 @@
   },
   "POS": {
     "NOUN": "noun",
+    "MASCULINE_NOUN": "noun[masculine]",
+    "FEMININE_NOUN": "noun[feminine]",
+    "NEUTER_NOUN": "noun[neuter]",
     "VERB": "verb",
     "TRANSITIVE_VERB": "transitive verb",
     "INTRANSITIVE_VERB": "intransitive verb",
