--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -147,6 +147,9 @@
   },
   "POS": {
     "NOUN": "名詞",
+    "MASCULINE_NOUN": "名詞[男性]",
+    "FEMININE_NOUN": "名詞[女性]",
+    "NEUTER_NOUN": "名詞[中性]",
     "VERB": "動詞",
     "TRANSITIVE_VERB": "他動詞",
     "INTRANSITIVE_VERB": "自動詞",
