fix: テキストを修正

--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -142,7 +142,7 @@
     "extra": {
       "derivatives": "派生語",
       "synonyms": "類義語",
-      "antonyms": "反義語"
+      "antonyms": "対義語"
     }
   },
   "POS": {
